--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,10 @@
 }
 body {
   margin: 0;
-  font-family: "Quicksand", sans-serif;
+  font-family: quicksand, sans-serif;
+}
+.inactive {
+  display: none;
 }
 nav {
   display: flex;
@@ -24,7 +27,6 @@ nav {
 .logo {
   width: 100px;
 }
-/* navbar */
 .navbar-left ul,
 .navbar-right ul {
   list-style: none;
@@ -54,8 +56,8 @@ nav {
   color: var(--hospital-green);
 }
 .navbar-email {
-  cursor: pointer;
   color: var(--very-light-pink);
+  cursor: pointer;
   font-size: var(--sm);
   margin-right: 12px;
 }
@@ -68,7 +70,7 @@ nav {
   background-color: var(--hospital-green);
   border-radius: 50%;
   font-size: var(--sm);
-  font-weight: bold;
+  font-weight: 700;
   position: absolute;
   top: -6px;
   right: -3px;
@@ -76,24 +78,8 @@ nav {
   justify-content: center;
   align-items: center;
 }
-.inactive {
-  opacity: 0;
-  /* display: none; */
-}
-:root {
-  --white: #ffffff;
-  --black: #000000;
-  --very-light-pink: #c7c7c7;
-  --text-input-field: #f7f7f7;
-  --hospital-green: #acd9b2;
-  --sm: 14px;
-  --md: 16px;
-  --lg: 18px;
-}
-/* Desktop menu*/
 .desktop-menu {
   position: absolute;
-  transition: 0.2s;
   top: 60px;
   right: 60px;
   background: var(--white);
@@ -101,8 +87,7 @@ nav {
   height: auto;
   border: 1px solid var(--very-light-pink);
   border-radius: 6px;
-  padding: 20px 20px 0 20px;
-  box-shadow: 5px 5px 10px var(--very-light-pink);
+  padding: 20px 20px 0;
 }
 .desktop-menu ul {
   list-style: none;
@@ -114,7 +99,7 @@ nav {
 }
 .desktop-menu ul li:nth-child(1),
 .desktop-menu ul li:nth-child(2) {
-  font-weight: bold;
+  font-weight: 700;
 }
 .desktop-menu ul li:last-child {
   padding-top: 20px;
@@ -130,20 +115,18 @@ nav {
   margin-bottom: 20px;
   display: inline-block;
 }
-
-/* estilos mobile  */
-
 .mobile-menu {
-  transition: 0.2s;
+  background-color: var(--white);
   position: absolute;
   top: 60px;
+  left: 0;
+  width: 100%;
   padding: 24px;
 }
 .mobile-menu a {
   text-decoration: none;
   color: var(--black);
-  font-weight: bold;
-  margin-bottom: 24px;
+  font-weight: 700;
 }
 .mobile-menu ul {
   padding: 0;
@@ -164,15 +147,15 @@ nav {
   font-size: var(--sm);
   color: var(--hospital-green) !important;
 }
-
-/* shopping cart  */
-.product-detail {
-  transition: 0.4s;
+aside {
+  background-color: var(--white);
   width: 360px;
-  padding: 0 24px;
   box-sizing: border-box;
   position: absolute;
   right: 0;
+}
+#shoppingCartContainer {
+  padding: 0 24px;
 }
 .title-container {
   display: flex;
@@ -183,7 +166,7 @@ nav {
 }
 .title {
   font-size: var(--lg);
-  font-weight: bold;
+  font-weight: 700;
 }
 .order {
   display: grid;
@@ -201,11 +184,11 @@ nav {
 }
 .order p span:nth-child(1) {
   font-size: var(--md);
-  font-weight: bold;
+  font-weight: 700;
 }
 .order p:nth-child(2) {
   text-align: end;
-  font-weight: bold;
+  font-weight: 700;
 }
 .shopping-cart {
   display: grid;
@@ -228,7 +211,7 @@ nav {
 }
 .shopping-cart p:nth-child(3) {
   font-size: var(--md);
-  font-weight: bold;
+  font-weight: 700;
 }
 .primary-button {
   background-color: var(--hospital-green);
@@ -238,10 +221,66 @@ nav {
   width: 100%;
   cursor: pointer;
   font-size: var(--md);
-  font-weight: bold;
+  font-weight: 700;
   height: 50px;
 }
-
+.product-detail-close {
+  background: var(--white);
+  width: 14px;
+  height: 14px;
+  position: absolute;
+  top: 24px;
+  left: 24px;
+  z-index: 2;
+  padding: 12px;
+  border-radius: 50%;
+}
+.product-detail-close:hover {
+  cursor: pointer;
+}
+#productDetail > img:nth-child(2) {
+  width: 100%;
+  height: 360px;
+  object-fit: cover;
+  border-radius: 0 0 20px 20px;
+}
+#productDetail .product-info {
+  margin: 24px 24px 0;
+}
+#productDetail .product-info p:nth-child(1) {
+  font-weight: 700;
+  font-size: var(--md);
+  margin-top: 0;
+  margin-bottom: 4px;
+}
+#productDetail .product-info p:nth-child(2) {
+  color: var(--very-light-pink);
+  font-size: var(--md);
+  margin-top: 0;
+  margin-bottom: 36px;
+}
+#productDetail .product-info p:nth-child(3) {
+  color: var(--very-light-pink);
+  font-size: var(--sm);
+  margin-top: 0;
+  margin-bottom: 36px;
+}
+.primary-button {
+  background-color: var(--hospital-green);
+  border-radius: 8px;
+  border: none;
+  color: var(--white);
+  width: 100%;
+  cursor: pointer;
+  font-size: var(--md);
+  font-weight: 700;
+  height: 50px;
+}
+.add-to-cart-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 .cards-container {
   display: grid;
   grid-template-columns: repeat(auto-fill, 240px);
@@ -258,32 +297,31 @@ nav {
   border-radius: 20px;
   object-fit: cover;
 }
-.product-info {
+.product-card .product-info {
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin-top: 12px;
 }
-.product-info figure {
+.product-card .product-info figure {
   margin: 0;
 }
-.product-info figure img {
+.product-card .product-info figure img {
   width: 35px;
   height: 35px;
 }
-.product-info div p:nth-child(1) {
-  font-weight: bold;
+.product-card .product-info div p:nth-child(1) {
+  font-weight: 700;
   font-size: var(--md);
   margin-top: 0;
   margin-bottom: 4px;
 }
-.product-info div p:nth-child(2) {
+.product-card .product-info div p:nth-child(2) {
   font-size: var(--sm);
   margin-top: 0;
   margin-bottom: 0;
   color: var(--very-light-pink);
 }
-
 @media (max-width: 640px) {
   .menu {
     display: block;
@@ -297,7 +335,7 @@ nav {
   .desktop-menu {
     display: none;
   }
-  .product-detail {
+  aside {
     width: 100%;
   }
   .cards-container {
